# UJ_Fluidic_backbone

./: .gitignore  Fluidic_backbone_GUI.py  GUI.py  Manager.py  README.md  fbexceptions.py  main.py  notes.txt  robot_setup.py  setup.cfg  setup.py  setup_GUI.py  web_listener.py
CAD_files/reactor/: M3x0.5 12mm.SLDPRT  M3x2.4mm Hex Nut.SLDPRT  PTFE washer.SLDPRT  fan magnet mount rect 2.SLDPRT  fan magnet mount rect 2.STL  fan.SLDPRT  n42 rect magnet.SLDPRT  ptfe fan spacer.SLDPRT  reactor 0.2.SLDASM  reactor plate.SLDPRT  reactor stand with fan.SLDPRT  reactor stand with fan.STL
Configs/: Pipeline.json  cmd_config.json  module_connections.json  module_info.json  running_config.json
Devices/: device.py  devices.py  magStirrer.py  ohStirrer.py  stepperMotor.py
Fluidic_backbone_arduino/: Fluidic_backbone_arduino.ino  Fluidic_backbone_arduino.ino.orig
Modules/: Module.py  camera.py  modules.py  reactor.py  selectorValve.py  syringePump.py
UJ_FB/: fluidic_backbone_gui.py  manager.py  setup_GUI.py  web_listener.py
Unit_tests/: GUI_test.py  Json_load.py  cmd_config.json  cmd_config_simple_valve.json  data.json  fanstirrer.py  graph_movement.py  graphing.py  module_connections.json  simple_chemical_scripts.py  threading_test.py  timing.py  tkinter_test.py
XDL_samples/: aspirin_synthesis.xdl  azo_dye.xdl  paracetamol2.xdl
docs/: SI - A low-cost, IoT enabled platform for automated chemical synthesis.docx  coeff_calc.m
tests/: cmd_config.json  cmd_config_simple_valve.json  context.py  dummy_manager.py  simple_chemical_scripts.py  simple_valve.py  timing.py
(+106 files in other folders)
