[metadata]
name = UJ_FB
version = 1.0
description = Package to control open-source hardware via Arduino microcontrollers for chemical synthesis
author = Matthew Nel
author_email = mattnel@outlook.com
url = https://github.com/Pajables/UJ_Fluidic_backbone.git

[options]
package_dir =
	=src
packages = find:
install_requires = 
	networkx
	pillow
	opencv-python
	
[options.package_data]
UJ_FB = configs/*.json, *.ico, *.png

[options.packages.find]
where = src

